# code

./: .gitignore  README.md  Untitled Diagram.xml  readme.txt
automake/: Makefile  Makefile.in  config.status
base64/: base64.c
c/: asm_leal.c  attribute.c  bit_field.c  cache_line.c  check.c  clock.c  const_point.c  efence.c  enum.c  escape.c  extern.cc  ffs.c  fork_max.c  gdb_test.c  hello.c  hello.s  if.c  index_address.c  inline_test.c  inline_test.h  inotify_test.c  likely.c  linux_log.c  logic_negation.c  lseek.c  macro.c  mem_test.c  mkdir.c  mmap.c  mmap_example.c  mv_file_in_open_status.c  point.c  recurve.c  register.c  reopen.c  sched.c  semaphore_test.c  sleep.c  strtok.c  strtok_r.c  (+18 more)
c++/: callback.cc  callback_more.cc  insert_and_delete.cc  make_shared_demo.cc  rightValueReference.cc  sales_data.cpp  sales_data.h  serial.cc  string_change.cc  struct_member.c  swap.cpp  useFunctionCallclassMethod.cc  vector.cpp
config_qemu_kernel_environment/: compile_and_run.sh  delete_not_used_files.sh  get_not_compiled_files.cc  run_qemu_arm.sh
design_mode/: dip.cc  dip2.cc
dts/: Makefile  test.dts
gdb/: main.cc
git/: send_file_to_github.txt
http/: simple_http_server.py
http/c++_simple_http_server/: CMakeLists.txt  server.cc
java/: GuessBirthday.java
java_learning/: Hello.java
kernel_learning/: cache.c  hello.c  mmap_gap.cc  user_space_size.cc
ldd_songbaohua/: anon_union.c
ldd_songbaohua/cache/: CMakeLists.txt  cache_test.cc
linux-5.18.5_studay/: 0001-temp-commit.patch
opencv_learn2/: add.py  bin.py  bit.py  boolArray.py  cap.py  car.py  (+18 more)
(+859 files in other folders)
